...

                               [tester waitForViewWithAccessibilityLabel:@"Please submit your Verified by Visa password." traits:UIAccessibilityTraitStaticText];
                               [tester tapUIWebviewXPathElement:@"//input[@name=\"external.field.password\"]"];
                               [tester waitForTimeInterval:TIME_TO_WAIT_FOR_KEYBOARD];

                               [tester enterTextIntoCurrentFirstResponder:@"1234"];
                               [tester tapViewWithAccessibilityLabel:@"Submit"];
                           } didAuthenticate:^(BTThreeDSecureAuthenticationViewController *threeDSecureViewController, BTCardPaymentMethod *card, void (^completion)(BTThreeDSecureViewControllerCompletionStatus)) {
                               calledDidAuthenticate = YES;
                               expect(card.nonce).to.beANonce();
                           } didFail:nil
                       didFinish:nil];

...
        it(@"closes the popup when the user taps Cancel in the nav bar", ^{
            [helper lookupHappyPathAndDo:^(BTThreeDSecureAuthenticationViewController *threeDSecureViewController) {
                [system presentViewController:threeDSecureViewController withinNavigationControllerWithNavigationBarClass:nil toolbarClass:nil configurationBlock:nil];

                [tester tapViewWithAccessibilityLabel:@"Help"];
                [tester waitForViewWithAccessibilityLabel:@"Social Security Number"];
                [tester tapViewWithAccessibilityLabel:@"Cancel"];

                [tester waitForViewWithAccessibilityLabel:@"Please submit your Verified by Visa password." traits:UIAccessibilityTraitStaticText];
            }];
        });
        
        it(@"closes the popup when the user taps a close link", ^{
...
        it(@"uses the html title tag for the view controllers title", ^{
            [helper lookupHappyPathAndDo:^(BTThreeDSecureAuthenticationViewController *threeDSecureViewController) {
                [system presentViewController:threeDSecureViewController withinNavigationControllerWithNavigationBarClass:nil toolbarClass:nil configurationBlock:nil];

                [tester waitForViewWithAccessibilityLabel:@"Please submit your Verified by Visa password." traits:UIAccessibilityTraitStaticText];

                expect(threeDSecureViewController.title).to.equal(@"Authentication");
            }];
        });
    });
});

SpecEnd
...
